Added auto code highlighting to index via highlight.js.

--- a/html/index.html
+++ b/html/index.html
@@ -173,3 +173,9 @@ scp ../ezOptionParser-0.1.4.tar.gz rsz,ezoptionparser@shell.sourceforge.net:/hom
 <h2>License</h2>
 
 <p>Copyright 2011, 2012 Remik Ziemlinski (see MIT-LICENSE)</p>
+
+<p><link rel="stylesheet" href="http://yandex.st/highlightjs/7.0/styles/default.min.css"></p>
+
+<script src="http://yandex.st/highlightjs/7.0/highlight.min.js"></script>
+
+<script>hljs.initHighlightingOnLoad();</script>
