Improved example code snippet in readme.

--- a/html/ezOptionParser.html
+++ b/html/ezOptionParser.html
@@ -4364,7 +4364,7 @@ body .il { color: #FF6600 } /* Literal.Number.Integer.Long */
   <span class="p">}</span>
 <span class="p">};</span>
 <span class="p">}</span>
-<span class="cm">/* ################################################################### */</span>
+<span class="cp">/* ################################################################### */</span>
 <span class="cp">#endif </span><span class="cm">/* EZ_OPTION_PARSER_H */</span><span class="cp"></span>
 </pre></div>
 </td></tr></table></body>
