--- a/html/validrangefast.html
+++ b/html/validrangefast.html
@@ -582,7 +582,7 @@ body .il { color: #FF6600 } /* Literal.Number.Integer.Long */
     <span class="n">vU4</span>
   <span class="p">);</span>
   
-  <span class="kt">unsigned</span> <span class="kt">long</span> <span class="kt">long</span> <span class="n">u8</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="mi">0</span><span class="p">,</span><span class="mi">18446744073709551615</span><span class="n">U</span><span class="p">};</span>
+  <span class="kt">unsigned</span> <span class="kt">long</span> <span class="kt">long</span> <span class="n">u8</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="mi">0</span><span class="p">,</span><span class="mi">18446744073709551615U</span><span class="p">};</span>
   <span class="n">ezOptionValidator</span><span class="o">*</span> <span class="n">vU8</span> <span class="o">=</span> <span class="k">new</span> <span class="n">ezOptionValidator</span><span class="p">(</span><span class="n">ezOptionValidator</span><span class="o">::</span><span class="n">U8</span><span class="p">,</span> <span class="n">ezOptionValidator</span><span class="o">::</span><span class="n">GELE</span><span class="p">,</span> <span class="n">u8</span><span class="p">,</span> <span class="mi">2</span><span class="p">);</span>
   <span class="n">opt</span><span class="p">.</span><span class="n">add</span><span class="p">(</span>
     <span class="s">&quot;0&quot;</span><span class="p">,</span> <span class="c1">// Default.</span>
