Added parseIndex feature.

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,8 @@
 <li>Validation of required options, number of expected arguments per flag, datatype ranges, user defined ranges, membership in lists and case for string lists.</li>
 <li>Validation criteria definable by strings or constants.</li>
 <li>Multiple file import with comments.</li>
-<li>Exports to file, either set options or all options including defaults when available. </li>
+<li>Exports to file, either set options or all options including defaults when available.</li>
+<li>Option parse index for order dependent contexts. </li>
 <li>MIT license.</li>
 <li>Minimal learning curve due to many examples.</li>
 <li>Automated regression and memory tests with valgrind.</li>
@@ -43,6 +44,9 @@ Demo of using long flag names.</p>
 
 <p><a href="multi.html">multi.cpp</a>
 Shows how to handle multiple instances of a flag.</p>
+
+<p><a href="parseindex.html">parseindex.cpp</a>
+Demo of parsed indices for options, so you can create ordered contexts.</p>
 
 <p><a href="pretty.html">pretty.cpp</a>
 Demo of pretty printing everything parsed, which can help in debugging.</p>
@@ -159,17 +163,23 @@ make clean
 
 <pre><code>make html
 make clean
-make dist VER=0.1.4
+make dist VER=0.2.0
 </code></pre>
 
 <h2>Publishing</h2>
 
 <pre><code>ssh -t rsz,ezoptionparser@shell.sourceforge.net create 
 scp html/* ezOptionParser.hpp rsz,ezoptionparser@shell.sourceforge.net:/home/project-web/ezoptionparser/htdocs
-scp ../ezOptionParser-0.1.4.tar.gz rsz,ezoptionparser@shell.sourceforge.net:/home/frs/project/e/ez/ezoptionparser
+scp ../ezOptionParser-0.2.0.tar.gz rsz,ezoptionparser@shell.sourceforge.net:/home/frs/project/e/ez/ezoptionparser
 </code></pre>
 
 <h2>Changelog</h2>
+
+<p>v0.2.0 (20121120)</p>
+
+<ul>
+<li>Added parse index to options. Thanks to Michael Lachmann for the idea.</li>
+</ul>
 
 <p>v0.1.4 (20120629)</p>
 
