Adding ability to disable usage description empty line padding.

--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@ int main(int argc, const char * argv[]) {
   opt.overview = "Demo of pretty printing everything parsed.";
   opt.syntax = "pretty [OPTIONS]";
   opt.example = "pretty foo bar --debug --dummy -list 1,2,16 in1 in2 out\n\n";
-  opt.footer = "ezOptionParser (C) 2012\n";
+  opt.footer = "ezOptionParser (C) 2013\n";
 
   opt.add(
     "", // Default.
@@ -144,7 +144,7 @@ EXAMPLES:
 
 pretty foo bar --debug --dummy -list 1,2,16 in1 in2 out
 
-ezOptionParser (C) 2012
+ezOptionParser (C) 2013
 </code></pre>
 
 <h2>Testing</h2>
@@ -170,10 +170,16 @@ make dist VER=0.2.0
 
 <pre><code>ssh -t rsz,ezoptionparser@shell.sourceforge.net create 
 scp html/* ezOptionParser.hpp rsz,ezoptionparser@shell.sourceforge.net:/home/project-web/ezoptionparser/htdocs
-scp ../ezOptionParser-0.2.0.tar.gz rsz,ezoptionparser@shell.sourceforge.net:/home/frs/project/e/ez/ezoptionparser
+scp ../ezOptionParser-0.2.1.tar.gz rsz,ezoptionparser@shell.sourceforge.net:/home/frs/project/e/ez/ezoptionparser
 </code></pre>
 
 <h2>Changelog</h2>
+
+<p>v0.2.1 (20130506)</p>
+
+<ul>
+<li>Added a toggle to disable extra line break between OPTIONS usage descriptions (opts->doublespace = 0;). This will pack the descriptions together like traditional usage messages, so you can see more per page.</li>
+</ul>
 
 <p>v0.2.0 (20121120)</p>
 
